Host/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:28:32 **** Incremental Build of configuration Debug for project 01_if_else_ladder ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c: In function ‘main’:
../main.c:18:55: error: expected expression before ‘)’ token
   18 |                 printf("You have to pay %f$ taxes.\n",);
      |                                                       ^
../main.c:24:55: error: expected expression before ‘)’ token
   24 |                 printf("You have to pay %f$ taxes.\n",);
      |                                                       ^
../main.c:29:55: error: expected expression before ‘)’ token
   29 |                 printf("You have to pay %f$ taxes.\n",);
      |                                                       ^
../main.c:34:55: error: expected expression before ‘)’ token
   34 |                 printf("You have to pay %f$ taxes.\n",);
      |                                                       ^
../main.c:11:22: warning: variable ‘tax’ set but not used [-Wunused-but-set-variable]
   11 |         float income,tax;
      |                      ^~~
make: *** [subdir.mk:20: main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
17:29:08 **** Incremental Build of configuration Debug for project 01_if_else_ladder ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_else_ladder
Invoking: GCC C Linker
gcc  -o "01_if_else_ladder" ./main.o   
Finished building target: 01_if_else_ladder
 
17:29:54 **** Incremental Build of configuration Debug for project 01_if_else_ladder ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_else_ladder
Invoking: GCC C Linker
gcc  -o "01_if_else_ladder" ./main.o   
Finished building target: 01_if_else_ladder
 
17:30:29 **** Incremental Build of configuration Debug for project 01_if_else_ladder ****
make all 
make: Nothing to be done for 'all'.
17:33:29 **** Incremental Build of configuration Debug for project 01_if_else_ladder ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_else_ladder
Invoking: GCC C Linker
gcc  -o "01_if_else_ladder" ./main.o   
Finished building target: 01_if_else_ladder
 
